Исправление багов в Конструкторе Конструктор теперь использует те же библиотеки что и Закладочник Обновлена библиотека jQuery до 1.4.2
git-svn-id: file:///Users/Jeck/Code/php/bmsubmitter/trunk@14 061fbcf0-d383-48d6-9823-cd146e9b6700

--- a/constructor/templates/addform.html
+++ b/constructor/templates/addform.html
@@ -1,17 +1,19 @@
 <?foreach ($forms as $formNumber => $form):?>
-	<?foreach ($form['data'] as $key => $value):?>
-		<div class='field-title'><?=$key?></div>
-		<div class='field-value'>
-			<select name='addForm[]'>
-				<option></option>
-				<option value='<?=$key?>:url'>URL</option>
-				<option value='<?=$key?>:name'>Название</option>
-				<option value='<?=$key?>:description'>Описание</option>
-				<option value='<?=$key?>:tags'>Тэги</option>
-				<option value='<?=$key?>:check'>Проверить</option>
-				<option value='<?=$key?>:null'>Убрать</option>
-			</select>
-		</div>
-	<?endforeach?>
-	<hr/>
+	<?if (count($form['data']) > 0):?>
+		<?foreach ($form['data'] as $key => $value):?>
+			<div class='field-title'><?=$key?></div>
+			<div class='field-value'>
+				<select name='addForm[]'>
+					<option></option>
+					<option value='<?=$key?>:url'>URL</option>
+					<option value='<?=$key?>:name'>Название</option>
+					<option value='<?=$key?>:description'>Описание</option>
+					<option value='<?=$key?>:tags'>Тэги</option>
+					<option value='<?=$key?>:check'>Проверить</option>
+					<option value='<?=$key?>:null'>Убрать</option>
+				</select>
+			</div>
+		<?endforeach?>
+		<hr/>
+	<?endif?>
 <?endforeach?>
