--- a/templates/style.css
+++ b/templates/style.css
@@ -87,8 +87,14 @@ select {min-width:12em;}
 #setting label a {padding:0 1em;}
 #modulesSelect a img {padding-right:.4em;}
 
-#history dd a {text-decoration:none; padding-right:.3em; opacity:.3;}
-#history dd a:hover {opacity:1;}
+#history dd img {text-decoration:none; padding-right:.3em; opacity:.3;}
+#history dd img:hover {opacity:1.2;}
+#history dd p{line-height: 1;margin: 0;margin-bottom:.5em;}
+.linksList {display: none}
+.linksList a{
+	color: black;
+	text-decoration: none;
+}
 
 dl, #posting {margin:1em;} dt {margin-bottom:.6em;} dd {margin-bottom:1em;}
 
